# Copilot-friendly

./: README.md  pyproject.toml
app/: __init__.py  config.py  main.py
config/: settings.yaml
controller/: __init__.py  inference.py  pipeline.py  sensors.py
tests/: test_config.py  test_pipeline.py
