[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jetson-ai-controller"
version = "0.1.0"
description = "Modular edge AI controller for robotics and embedded systems"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Your Name" }
]
license = { text = "MIT" }
dependencies = [
  "PyYAML>=6.0",
  "pytest>=8.0"
]

[project.optional-dependencies]
vision = [
  "opencv-python>=4.9",
  "numpy>=1.26"
]

[project.scripts]
jetson-ai-controller = "app.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
